# openevolve

./: .gitignore  Dockerfile  Makefile  README.md  demo_prompt_output.py  direct_test.py  direct_unittest.py  manual_test.py  models  pyproject.toml  run_test.py  simple_test.py  test_enhanced_structured_env.py  test_env.py  test_execution.py  test_pool_performance.py  test_prompt_builder.py  test_runner.py  test_verification.py  unittest_runner.py  verify_fixes.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
LLM-Models/: download_gemma-3-270m.py  start_gemma-3-270-it.sh  start_medgamma-4b-it.sh  start_qwen-3-14b.sh
configs/: README.md  default_config.yaml  island_config_example.yaml
examples/: README.md  prompt_builder_example.py  simple_prompt_builder_example.py
opencontext/: __init__.py  _version.py  actions.py
openevolve/: __init__.py  config.py  controller.py  database.py  evaluator.py  iteration.py  process_parallel.py
scripts/: download_qwen2_7b_instruct.py  start_llm.sh  visualizer.py
tests/: test_artifacts.py  test_artifacts_integration.py  test_checkpoint_resume.py  test_code_utils.py  test_database.py  test_enhanced_env_manual.py  test_evaluators.py  test_evolution_actor.py  test_exe_critic.py  test_island_migration.py  test_island_tracking.py  test_iteration_counting.py  test_llm.py  test_llm_critic.py  test_llm_diff_validator.py  test_llm_diff_validator_local.py  test_llm_ensemble.py  test_map_elites_features.py  test_map_elites_fix.py  test_openai_llm.py  test_orchestrator.py  test_process_parallel.py  (+2 more)
(+178 files in other folders)
