[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencontext"
dynamic = ["version"]
description = "RL based meta-prompt engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "codelion"}
]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.22.0",
    "tqdm>=4.64.0",
    "vllm>=0.10.0",
    "gymnasium>=1.2.0",    
    "flask",
    "huggingface_hub",
    "ray[default]",  # Added to install all core Ray packages
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.scripts]
opencontext-run = "opencontext.cli:main"

[tool.setuptools.packages.find]
include = ["opencontext*"]

[tool.setuptools.dynamic]
version = {attr = "opencontext._version.__version__"}

# Configure a PyPI mirror
[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"